test/bad/resolve/BadNewtype.hs
module BadNewtype where

newtype Pair = Pair Int Int
